Simplify comments and docs
Comments state what the code does, with at most one present-tense reason; README (EN/zh-CN), CHANGELOG,
Gradle files, workflows and the install-check script describe only current behaviour. Comment-only changes
in code files (checked by comparing the sources with comments stripped).